ajuste no layout do ebook spring mvc

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,11 +46,14 @@
       <img class="img-fluid rounded mb-4 mb-lg-0" width="275" src="img/ebook.png" style="margin-left: 80px">
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
-      <h5 class="font-weight-light text-light">E-book gratuito que vai te ensinar</h5>
-      <h2 class="font-weight-black text-danger">Java com Spring Mvc</h2>
-      <p class="text-light">
-        O Guia Definitivo para você aprender a trabalhar com Java e com o framework Spring Mvc.
-      </p>
+      <h3 class="font-weight-light text-light">E-book gratuito que vai te </h3>
+      <h3 class="font-weight-black text-danger">Ensinar Java com Spring Mvc </h3>
+
+      <h4 class="text-light">
+        2022 você no próximo nível!
+        <span class="font-weight-black text-danger"> #vamosEvoluirJuntos 💻 </span>
+      </h4>
+      <br>
       <a th:href="@{#form}" class="btn text-white" style="background-color: #dc3545!important;">
         Baixe o e-book agora!
       </a>
@@ -62,8 +65,17 @@
   <!-- Call to Action-->
   <div class="container my-5 py-4 text-center">
     <div class="container">
-      <h5 class="font-weight-light" style="color:#14100D";> Neste e-book gratuito  </h5>
-      <h1 class="font-weight-black" style="color:#14100D";> Você vai aprender </h1>
+      <h1 class="font-weight-light " style="color:#14100D";> Neste
+        <span class="text-danger" style="font-family: 'Courgette', cursive";>
+        E-BOOK
+      </span>
+        gratuito
+      </h1>
+      <h3 class="font-weight-black" style="color:#14100D";> Você vai aprender programação
+        <span class="text-danger" style="font-family: 'Courgette', cursive";>
+       #naPrática 💻
+      </span>
+      </h3>
     </div>
   </div>
 
