--- a/src/main/resources/templates/pages/ebook.html
+++ b/src/main/resources/templates/pages/ebook.html
@@ -48,10 +48,18 @@
     </div>
     <div class="col-lg-4 center" style="margin: 15px">
       <h2 class="font-weight-black text-danger"> Obrigado(a) </h2>
-      <h5 class="font-weight-light text-light"> Você acabou de realizar o download do nosso e-book </h5>
+      <h3 class="font-weight-light text-light"> Neste
+        <span class="text-danger" style="font-family: 'Courgette', cursive";> e-book gratuito  </span>
+      </h3>
+      <h3 class="font-weight-black text-light" > Você vai aprender programação
+        <span class="text-danger" style="font-family: 'Courgette', cursive";>
+       #naPrática 💻
+      </span>
+      </h3>
+      <br>
       <tr th:each="ebooks: ${ebook}"></tr>
       <a href="img/ebookSpring.pdf" download class="btn text-white" style="background-color: #dc3545!important;">
-        Baixe o e-book agora!
+        Faça o download agora!
       </a>
     </div>
   </div>
@@ -61,7 +69,16 @@
 <!-- Call to Action-->
 <div class="container my-5 py-4 text-center">
   <div class="container">
-    <h1 class="font-weight-black" style="color:#14100D";> Veja nossos outros e-books</h1>
+    <h1 class="font-weight-black" style="color:#14100D";> Bônus </h1>
+    <h3 class="font-weight-light text-black"> Vou disponibilizar
+      <span class="text-danger" style="font-family: 'Courgette', cursive";> 03 e-books  </span>
+    </h3>
+    <h3 class="font-weight-black text-black" > gratuitos
+      <span class="text-danger" style="font-family: 'Courgette', cursive";>
+       #naPrática 💻
+      </span>
+    </h3>
+    <br>
   </div>
 </div>
 
